Enhance README and main.go: Add interactive features, edit task functionality, and improve task display

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"Title":"Test task baru yok","Completed":true}]
+[{"Title":"Test baru","Completed":false},{"Title":"WFC Space-K","Completed":true}]
